# giveaway

./: .gitignore  Justfile  README.md  flake.nix  giveaway.cabal
app/: Main.hs
src/Butler/App/: GiveAway.hs
