cabal-version: 3.0
name: giveaway
version: 0.1
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple

common common
  build-depends: base <5
  default-language: GHC2021
  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -Wno-partial-type-signatures
    -fwrite-ide-info
    -Wno-missing-methods

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    ViewPatterns

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-T

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Butler.App.GiveAway

  build-depends:
    butler,
    lucid,
    sqlite-simple,

executable giveaway
  import: common, executable
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    butler,
    giveaway,
